# kcal

./: README.md  pyproject.toml
src/kcal/: __main__.py  auth.py  cli.py  client.py  dedupe.py  models.py
tests/: test_cli.py  test_dedupe.py
